Starting work on the Operator - New records, classes. - New tests - Added maven-failsafe-plugin and renamed classes so that (slow) integration tests can be run distinct from unit tests. The 'verify' goal will run both and is included by the 'install' goal. That said, they are still kind of wobbly, failing sporadically. The "right" structure for using testcontainers remains an open question. - Cribbed Franz Wilhelmstötter's lovely io.jenetics.util.NanoClock for higher resolution timing data. - Platform enum - Started adding some heartbeat support to RabbitQueueProducer/Consumer. Unclear how we leverage this further... - Added Telecom utility that uses publically available area code data to distinguish U.S. and Canadian numbers. - NOTE: Operator brings in the preview-only (in Java 23) StructuredConcurrency feature. Requires adding compilerArgs and argLine to the maven-compiler-plugin and maven-surefire-plugin respectively.