@@ -160,8 +160,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.source}</target>
+                    <source>23</source>
+                    <target>23</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
@@ -211,6 +212,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.2</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -227,42 +231,60 @@
                 </executions>
             </plugin>
 
-<!--            <plugin>-->
-<!--                <groupId>com.spotify</groupId>-->
-<!--                <artifactId>dockerfile-maven-plugin</artifactId>-->
-<!--                <version>1.4.13</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>default</id>-->
-<!--                        <goals>-->
-<!--                            <goal>build</goal>-->
-<!--                            <goal>push</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--                <configuration>-->
-<!--                    <repository>spotify/foobar</repository>-->
-<!--                    <tag>${project.version}</tag>-->
-<!--                    <buildArgs>-->
-<!--                        <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>-->
-<!--                        &lt;!&ndash; <DOCKER_FILE>Dockerfile.jvm</DOCKER_FILE>&ndash;&gt;-->
-<!--                    </buildArgs>-->
-<!--&lt;!&ndash;                    <dockerfile.contextDirectory>/Users/mark/Development/sndrRcvr/jvm</dockerfile.contextDirectory>&ndash;&gt;-->
-<!--                </configuration>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.5.2</version>
+                <!--<configuration>
+                    <skipITs>true</skipITs>
+                </configuration>-->
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+<!--
+                        <plugin>
+                            <groupId>com.spotify</groupId>
+                            <artifactId>dockerfile-maven-plugin</artifactId>
+                            <version>1.4.13</version>
+                            <executions>
+                                <execution>
+                                    <id>default</id>
+                                    <goals>
+                                        <goal>build</goal>
+                                        <goal>push</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                            <configuration>
+                                <repository>spotify/foobar</repository>
+                                <tag>${project.version}</tag>
+                                <buildArgs>
+                                    <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+                                    &lt;!&ndash; <DOCKER_FILE>Dockerfile.jvm</DOCKER_FILE>&ndash;&gt;
+                                </buildArgs>
+            &lt;!&ndash;                    <dockerfile.contextDirectory>/Users/mark/Development/sndrRcvr/jvm</dockerfile.contextDirectory>&ndash;&gt;
+                            </configuration>
+                        </plugin>-->
 
         </plugins>
     </build>
 
-    <!--    <reporting>-->
-    <!--        <plugins>-->
-    <!--            <plugin>-->
-    <!--                <groupId>org.apache.maven.plugins</groupId>-->
-    <!--                <artifactId>maven-surefire-report-plugin</artifactId>-->
-    <!--                <version>3.5.2</version>-->
-    <!--            </plugin>-->
-    <!--        </plugins>-->
-    <!--    </reporting>-->
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.5.2</version>
+            </plugin>
+        </plugins>
+    </reporting>
 
     <profiles>
         <profile>
@@ -272,7 +294,7 @@
                     <plugin>
                         <!-- https://mvnrepository.com/artifact/org.graalvm.buildtools/native-maven-plugin -->
                         <groupId>org.graalvm.buildtools</groupId>
-                                <artifactId>native-maven-plugin</artifactId>
+                        <artifactId>native-maven-plugin</artifactId>
                         <version>${native.maven.plugin.version}</version>
                         <executions>
                             <execution>
